Signup Button overflow hidden solved

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -18,7 +18,7 @@ body{
 .container{
     max-width: 360px;
     width: 100%;
-    height: 82%;
+    height: 90%;
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -36,6 +36,7 @@ body{
     align-items: center;
     width: 100%;
     background-color: #176B87;
+   
 }
 
 .signup_container span{
